--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -7,6 +7,7 @@
 @import 'global';
 @import 'components/buttons';
 @import 'components/forms';
+@import 'components/custom-select';
 @import 'components/color-picker';
 @import 'cards';
 @import 'responsive';
