--- a/BlogposterCMS/public/assets/scss/components/_page-content.scss
+++ b/BlogposterCMS/public/assets/scss/components/_page-content.scss
@@ -87,3 +87,19 @@
 
 .attached-content { margin-top: 20px; }
 
+.layout-select-menu {
+  position: fixed;
+  background: var(--color-white);
+  border-radius: 9px;
+  box-shadow: var(--shadow-card);
+  font-family: var(--font-body);
+  padding: 8px;
+  display: none;
+  z-index: 1000;
+}
+
+.layout-select-menu button {
+  margin-top: 8px;
+  width: 100%;
+}
+
