--- a/BlogposterCMS/public/plainspace/partials/sidebar-builder.html
+++ b/BlogposterCMS/public/plainspace/partials/sidebar-builder.html
@@ -4,5 +4,5 @@
       <!-- Widgets are dynamically loaded here -->
     </div>
   </nav>
-  <div id="textSidebar"></div>
+  <div id="builderPanel"></div>
 </div>
