--- a/BlogposterCMS/public/assets/scss/components/_content-area.scss
+++ b/BlogposterCMS/public/assets/scss/components/_content-area.scss
@@ -1,9 +1,10 @@
 #content {
   flex: 1 1 0;
-  min-width: 0;     
-  width: 100%; 
+  min-width: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative; // anchor floating elements like the text editor toolbar
 }
 
   .canvas-grid,
