--- a/BlogposterCMS/public/assets/css/site.css
+++ b/BlogposterCMS/public/assets/css/site.css
@@ -2190,9 +2190,14 @@ body.preview-desktop #content {
   z-index: 100;
 }
 
-body.builder-mode[data-active-layer="1"] .canvas-item[data-global=true] {
+body.builder-mode .canvas-item[data-global=true] {
   opacity: 0.6;
   pointer-events: none;
+}
+
+body.builder-mode[data-active-layer="0"] .canvas-item[data-global=true] {
+  opacity: 1;
+  pointer-events: auto;
 }
 
 body.builder-mode .canvas-item.inactive-layer {
@@ -2565,13 +2570,11 @@ body.builder-mode .canvas-item.inactive-layer:hover::after {
    Styles for the fixed text block editor toolbar
    ============================================================================= */
 .text-block-editor-toolbar {
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   width: -moz-max-content;
   width: max-content;
-  float: left;
-  margin-bottom: 4px;
   transform: none;
   display: flex;
   align-items: center;
