--- a/BlogposterCMS/public/assets/scss/pages/_admin.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_admin.scss
@@ -9,3 +9,13 @@
 #adminGrid {
   min-height: 100vh;
 }
+
+.resize-handle.br {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  bottom: 0;
+  right: 0;
+  cursor: se-resize;
+  background: url('/assets/icons/resize.svg') no-repeat center;
+}
