--- a/BlogposterCMS/apps/plainspace/partials/builder-header.html
+++ b/BlogposterCMS/apps/plainspace/partials/builder-header.html
@@ -4,6 +4,10 @@
     <img src="/assets/icons/save.svg" class="icon" alt="Save" />
     Save Layout
   </button>
+  <button id="publishLayoutBtn" class="button builder-publish-btn">
+    <img src="/assets/icons/upload.svg" class="icon" alt="Publish" />
+    Publish
+  </button>
   <button id="previewLayoutBtn" class="button builder-preview-btn">
     <img src="/assets/icons/eye.svg" class="icon" alt="Preview" />
     Preview
