--- a/BlogposterCMS/public/assets/scss/_global.scss
+++ b/BlogposterCMS/public/assets/scss/_global.scss
@@ -19,6 +19,10 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+
+  background: #fff;
+  border-radius: 14px;
+  box-shadow: 0 6px 24px rgba(0,0,0,0.07);
 }
 
 .widget-container.loading {
