--- a/BlogposterCMS/apps/plainspace/partials/content-header-pages.html
+++ b/BlogposterCMS/apps/plainspace/partials/content-header-pages.html
@@ -3,7 +3,7 @@
     <img id="newPageBtn" src="/assets/icons/plus.svg" class="icon" alt="New page" />
   </div>
   <div class="content-header-right">
-    <img id="edit-toggle" src="/assets/icons/edit.svg" class="icon" alt="Edit layout" />
+      <img id="edit-toggle" src="/assets/icons/pencil-line.svg" class="icon" alt="Edit layout" />
     <img id="pages-menu-toggle" src="/assets/icons/sidebar.svg" class="icon" alt="Toggle pages menu" />
   </div>
 </div>
