--- a/BlogposterCMS/public/plainspace/partials/content-header.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header.html
@@ -3,7 +3,7 @@
     <img id="dynamic-action-btn" class="icon" />
   </div>
   <div class="content-header-right">
-    <img id="edit-toggle" src="/assets/icons/edit.svg" class="icon" alt="Edit layout" />
+      <img id="edit-toggle" src="/assets/icons/pencil-line.svg" class="icon" alt="Edit layout" />
     <img id="pages-menu-toggle" src="/assets/icons/sidebar.svg" class="icon" alt="Toggle pages menu" />
   </div>
 </div>
