fix: replace missing icon references

--- a/BlogposterCMS/apps/plainspace/partials/default-sidebar.html
+++ b/BlogposterCMS/apps/plainspace/partials/default-sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <nav class="sidebar-nav">
     <a href="/admin/content/" class="sidebar-item">
-      <img src="/assets/icons/layout-gradient.svg" class="icon" alt="Overview"/>
+      <img src="/assets/icons/layout-dashboard.svg" class="icon" alt="Overview"/>
       <span class="label">Overview</span>
     </a>
     <a href="/admin/content/pages" class="sidebar-item">
@@ -18,7 +18,7 @@
       <span class="label">Media</span>
     </a>
     <a href="/admin/content/widgets" class="sidebar-item">
-      <img src="/assets/icons/grid.svg" class="icon" alt="Widgets"/>
+      <img src="/assets/icons/layout-grid.svg" class="icon" alt="Widgets"/>
       <span class="label">Widgets</span>
     </a>
     
