--- a/BlogposterCMS/public/assets/scss/pages/_admin.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_admin.scss
@@ -17,5 +17,5 @@
   bottom: 0;
   right: 0;
   cursor: se-resize;
-  background: url('/assets/icons/resize.svg') no-repeat center;
+  background: url('/assets/icons/move-diagonal.svg') no-repeat center;
 }
