--- a/BlogposterCMS/apps/plainspace/partials/content-header-pages.html
+++ b/BlogposterCMS/apps/plainspace/partials/content-header-pages.html
@@ -4,6 +4,6 @@
   </div>
   <div class="content-header-right">
       <img id="edit-toggle" src="/assets/icons/pencil-line.svg" class="icon" alt="Edit layout" />
-    <img id="pages-menu-toggle" src="/assets/icons/sidebar.svg" class="icon" alt="Toggle pages menu" />
+    <img id="pages-menu-toggle" src="/assets/icons/panel-left.svg" class="icon" alt="Toggle pages menu" />
   </div>
 </div>
