--- a/BlogposterCMS/public/plainspace/partials/pages-menu.html
+++ b/BlogposterCMS/public/plainspace/partials/pages-menu.html
@@ -10,7 +10,7 @@
     <span class="menu-title">Admin Pages</span>
 
     <!-- existing filter icon -->
-    <img src="/assets/icons/filter.svg"
+    <img src="/assets/icons/list-filter.svg"
          id="pages-menu-filter"
          class="icon"
          alt="Filter">
