--- a/BlogposterCMS/public/assets/css/site.css
+++ b/BlogposterCMS/public/assets/css/site.css
@@ -334,7 +334,6 @@
 .main-content {
   display: flex;
   flex-direction: row;
-  gap: 16px;
   background: var(--color-light-gray, #f6f6f7);
 }
 
@@ -349,7 +348,7 @@
   bottom: 0;
   right: 0;
   cursor: se-resize;
-  background: url("/assets/icons/resize.svg") no-repeat center;
+  background: url("/assets/icons/move-diagonal-2.svg") no-repeat center;
 }
 
 #content {
