--- a/BlogposterCMS/public/assets/scss/_global.scss
+++ b/BlogposterCMS/public/assets/scss/_global.scss
@@ -14,7 +14,8 @@ body {
 }
 
 // Prevent accidental text selection when dragging widgets
-.widget-container {
+// Style only applies to admin widgets
+.widget-container.admin-widget {
   user-select: none;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -25,7 +26,7 @@ body {
   box-shadow: 0 6px 24px rgba(0, 0, 0, 0.07);
 }
 
-.widget-container.loading {
+.widget-container.admin-widget.loading {
   opacity: 0;
 }
 
