--- a/BlogposterCMS/apps/plainspace/partials/top-header.html
+++ b/BlogposterCMS/apps/plainspace/partials/top-header.html
@@ -9,7 +9,7 @@
     </div>
     
     <div class="logo">
-      <img src="/assets/icons/book.svg" class="logo-icon" />
+      <img src="/assets/icons/blogpostercms-logo.svg" class="logo-icon" alt="BlogposterCMS logo" />
     </div>
     
     <div class="right-icons">
