--- a/BlogposterCMS/public/plainspace/partials/content-header-pages.html
+++ b/BlogposterCMS/public/plainspace/partials/content-header-pages.html
@@ -2,6 +2,7 @@
   <div class="content-header-left">
     <img id="newPageBtn" src="/assets/icons/plus.svg" class="icon" alt="New page" />
   </div>
+  <div class="content-header-center" id="content-breadcrumb"></div>
   <div class="content-header-right">
       <img id="edit-toggle" src="/assets/icons/pencil-line.svg" class="icon" alt="Edit layout" />
     <img id="pages-menu-toggle" src="/assets/icons/panel-left.svg" class="icon" alt="Toggle pages menu" />
