--- a/BlogposterCMS/public/assets/scss/pages/_admin.scss
+++ b/BlogposterCMS/public/assets/scss/pages/_admin.scss
@@ -1,8 +1,13 @@
 .main-content {
   display: flex;
-  flex-direction: row;   
+  flex-direction: row;
   background: var(--color-light-gray, #f6f6f7);
 
+}
+
+.workspace-shell {
+  margin-top: 8px;
+  border-radius: 16px;
 }
 
 #adminGrid {
