--- a/BlogposterCMS/public/assets/scss/components/_content-area.scss
+++ b/BlogposterCMS/public/assets/scss/components/_content-area.scss
@@ -1,9 +1,12 @@
 #content {
   flex: 1 1 0;
-  min-width: 0;     
-  width: 100%; 
+  min-width: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  box-shadow:
+    0 0 4px color-mix(in srgb, var(--user-color), transparent 60%),
+    0 0 12px color-mix(in srgb, var(--user-color), transparent 80%);
 }
 
   .canvas-grid,
